# aladdin-demo

./: .gitignore  README.md  lamp.json  prospector.yaml  pyproject.toml
.githooks/: pre-commit-00-style
components/: .dockerignore  .flake8  pip.conf  prospector.yaml  pyproject.toml
components/api/: Dockerfile  __init__.py  app.py  component.yaml  entrypoint.sh  pyproject.toml  requirements.txt  run.py
components/commands/: Dockerfile  __init__.py  component.yaml  get_pods.py  pyproject.toml  requirements.txt  status.py
components/commands/commands/: get_pods.py  status.py
components/import-order/: Dockerfile  component.yaml  pyproject.toml
components/init/: component.yaml  pyproject.toml
components/init/init/: __init__.py  populate_elasticsearch.py  populate_redis.py
components/lab/: Dockerfile  component.yaml
components/lab/work/: test.ipynb
components/pipeline/: Dockerfile  pyproject.toml  requirements.txt
components/pipeline-flake8/: Dockerfile  component.yaml  pyproject.toml
components/shared/: __init__.py  component.yaml  pyproject.toml  requirements.txt
components/shared/elasticsearch_util/: __init__.py  elasticsearch_connection.py  elasticsearch_populate.py
components/shared/redis_util/: __init__.py  redis_connection.py  redis_populate.py
components/style/: component.yaml  pyproject.toml
docs/: elasticsearch_statefulset.md  redis.md
docs/built/: .buildinfo  changelog.html  components.html  deployment.html  development.html  genindex.html  index.html  objects.inv  py-modindex.html  runbook.html  search.html  searchindex.js
docs/built/.doctrees/: changelog.doctree  components.doctree  deployment.doctree  development.doctree  index.doctree  runbook.doctree
docs/built/.doctrees/autoapi/api/: index.doctree
docs/built/.doctrees/autoapi/api/app/: index.doctree
docs/built/.doctrees/autoapi/api/run/: index.doctree
docs/built/.doctrees/autoapi/build_docker_images/: index.doctree
docs/built/.doctrees/autoapi/commands/: index.doctree
docs/built/.doctrees/autoapi/commands/get_pods/: index.doctree
docs/built/.doctrees/autoapi/commands/status/: index.doctree
docs/built/.doctrees/autoapi/shared/: index.doctree
docs/built/.doctrees/autoapi/shared/elasticsearch_util/: index.doctree
docs/built/.doctrees/autoapi/shared/elasticsearch_util/elasticsearch_connection/: index.doctree
docs/built/.doctrees/autoapi/shared/elasticsearch_util/elasticsearch_populate/: index.doctree
docs/built/.doctrees/autoapi/shared/redis_util/: index.doctree
docs/built/.doctrees/code/: components.doctree  index.doctree
docs/built/_modules/: build_docker_images.html  index.html
docs/built/_modules/api/: app.html  run.html
docs/built/_modules/commands/: get_pods.html  status.html
docs/built/_modules/shared/elasticsearch_util/: elasticsearch_connection.html  elasticsearch_populate.html
docs/built/_modules/shared/redis_util/: redis_connection.html  redis_populate.html
docs/built/_sources/: development.rst.txt  index.rst.txt
docs/built/_sources/autoapi/api/: index.rst.txt
docs/built/_sources/autoapi/api/app/: index.rst.txt
docs/built/_sources/autoapi/api/run/: index.rst.txt
docs/built/_sources/autoapi/build_docker_images/: index.rst.txt
docs/built/_sources/autoapi/commands/: index.rst.txt
docs/built/_sources/autoapi/commands/get_pods/: index.rst.txt
docs/built/_sources/autoapi/commands/status/: index.rst.txt
docs/built/_sources/autoapi/shared/: index.rst.txt
docs/built/_sources/autoapi/shared/elasticsearch_util/: index.rst.txt
docs/built/_sources/autoapi/shared/redis_util/: index.rst.txt
docs/built/_sources/code/: components.rst.txt  index.rst.txt
docs/built/autoapi/api/: index.html
docs/built/autoapi/api/app/: index.html
docs/built/autoapi/api/run/: index.html
docs/built/autoapi/build_docker_images/: index.html
docs/built/autoapi/commands/: index.html
docs/built/autoapi/commands/get_pods/: index.html
docs/built/autoapi/commands/status/: index.html
docs/built/autoapi/shared/: index.html
docs/built/autoapi/shared/elasticsearch_util/: index.html
docs/built/autoapi/shared/elasticsearch_util/elasticsearch_connection/: index.html
docs/built/autoapi/shared/elasticsearch_util/elasticsearch_populate/: index.html
docs/built/autoapi/shared/redis_util/: index.html
docs/built/autoapi/shared/redis_util/redis_connection/: index.html
docs/built/autoapi/shared/redis_util/redis_populate/: index.html
docs/built/code/: components.html  index.html
docs/source/: components.rst  conf.py  deployment.rst  runbook.rst
docs/source/code/: index.rst
etc/: component_schema.json  sample_component.yaml
helm/: Chart.yaml  values.yaml
helm/fast-api-prototype/: values.yaml
helm/fast-api-prototype/templates/api/: _elasticsearch_init.tpl  _elasticsearch_init.tpl.yaml  _nginx.conf.tpl  _redis_init.tpl  hpa.yaml
helm/fast-api-prototype/templates/commands/: deploy.yaml
helm/fast-api-prototype/templates/elasticsearch/: service.yaml
helm/fast-api-prototype/templates/lab/: _jupyter_notebook_config.py.tpl  jupyter.configMap.yaml
helm/fast-api-prototype/templates/shared/: configMap.yaml
helm/fast-api-prototype/values/: values.KDEV.yaml  values.KPROD.yaml  values.LOCAL.yaml
helm/templates/api/: _elasticsearch_init.tpl  _liveness.tpl  _nginx.conf.tpl  _readiness.tpl.yaml  _redis_init.tpl  deploy.yaml  hpa.yaml  service.yaml
helm/templates/commands/: deploy.yaml
helm/templates/lab/: deploy.yaml  service.yaml
helm/templates/shared/: configMap.yaml
helm/values/: values.KDEV.yaml  values.KPROD.yaml  values.KSTAG.yaml  values.LOCAL.yaml
(+6 files in other folders)
