[tool.poetry]
name = "fast-api-prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
aladdin-project-tools = {git = "https://github.com/jcwilson/aladdin-project-tools.git"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
