[tool.poetry]
name = "api"
version = "0.1.0"
description = "HTTP API server"
authors = ["Fivestars <dev@fivestarss.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ddtrace-asgi = "0.3.0"
fastapi = "0.53.2"
uvicorn = "0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
