[tool.poetry]
name = "commands"
version = "0.1.0"
description = "Aladdin commands"
authors = ["Fivestars <dev@fivestarss.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kubernetes = "10.0.1"
aiohttp = "3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
