[tool.poetry]
name = "pipeline-flake8"
version = "0.1.0"
description = "These tools would normally be part of the pipeline component, but there's a version conflict with pycodestyle at the moment"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-import-order-spoqa = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
