[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = "This component contains tools for CI validation and artifact generation."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pyflakes = "^2.1.1"
prospector = {extras = ["with_mypy"], version = "^1.2.0"}
isort = {extras = ["pyproject"], version = "^4.3.21"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
