[tool.poetry]
name = "style"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyflakes = ">=2.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
prospector = {extras = ["with_mypy"], version = "^1.2.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
